--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
 img {
-    width: 200px;
+    width: 500px;
 }
 
 body {
     text-align: center;
     font-family: "Comic Sans MS";
+    color:white;
+    background-image: url(http://www.sanfrancisco.travel/sites/sftraveldev.prod.acquia-sites.com/files/SanFrancisco_0.jpg)
+}
+
+.mvp {
+    text-align: center;
+    width:200px;
+    
+}
+
+.div1 {
+    width: 100px;
+    border: 4px solid blue;
+}
+
+.div2 {
+    text-align: center;
+    width: 500px;
 }
