--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-img {
-    width: 500px;
+.dog {
+    width:400px;
+    border: 4px solid white;
+    object-fit: none
 }
 
 body {
@@ -9,19 +11,82 @@ body {
     background-image: url(http://www.sanfrancisco.travel/sites/sftraveldev.prod.acquia-sites.com/files/SanFrancisco_0.jpg)
 }
 
+
 .mvp {
     text-align: center;
     border-style: solid;
-    width:200px;
-    
+    font-size: 150%
 }
 
 .div1 {
-    width: 100px;
+    width: 200px;
     border: 4px solid blue;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    font-size: 150%;
+    position:absolute;
+    -webkit-animation-name: mymove;
+    -webkit-animation-duration: 5s
+    animation-name: mymove;
+    animation-duration: 10s;
+    transform: traslate(100px,-102px)
 }
 
+@-webkit-keyframes mymove {
+    from {left: 0px;}
+    to {left: 1200px;}
+}
+
+@keyframes mymove {
+    from {left: 0px;}
+    to {left: 1200px;}
+}
 .div2 {
     text-align: center;
-    width: 500px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.golf {
+    width: 150px;
+    position:absolute;
+    float:left;
+    -moz-animation: 3s ease 0s normal none swing;
+    -moz-transform-origin: center top;
+    -webkit-animation:swing 3s  ease-in-out;
+    -webkit-transform-origin:top;
+    -ms-animation:swing 3s infinite ease-in-out;
+    -ms-transform-origin:top;
+}
+
+@-moz-keyframes swing{
+    0%{-moz-transform:rotate(-6deg)}
+    50%{-moz-transform:rotate(6deg)}
+    100%{-moz-transform:rotate(-6deg)}
+}
+@-webkit-keyframes swing{
+    0%{-webkit-transform:rotate(-6deg)}
+    50%{-webkit-transform:rotate(6deg)}
+    100%{-webkit-transform:rotate(-3deg)}
+}
+@-ms-keyframes swing{
+    0%{-ms-transform:rotate(-3deg)}
+    50%{-ms-transform:rotate(3deg)}
+    100%{-ms-transform:rotate(-3deg)}
+}
+
+.cup {
+    width:250px;
+    transform: rotate(270deg);
+}
+
+.div3 {
+    text-align: right;
+    transform: translate(60px,-102px)
+}
+
+.div4 {
+    transform: translateY(-292px);
+    text-align: left;
 }
